CCCS WMS sample and other samples

--- a/demos/index-all.html
+++ b/demos/index-all.html
@@ -99,6 +99,11 @@
                 <span class="tag layer">Feature Layer</span>
                 <span class="tag layer">Points</span>
             </li>
+            <li>
+                26.
+                <a href="index-samples?sample=26">Fog Hilighter</a>. A
+                demonstration of feature highlighting with the fog hilighter.
+            </li>
         </ul>
 
         Samples 5 to 14 to be added!.
@@ -124,6 +129,28 @@
                 <a href="index-samples.html?sample=22">Info Sections</a>. All
                 basic info section types
                 <span class="tag legend">Info Sections</span>
+            </li>
+        </ul>
+
+        <h2>Respect for Apps</h2>
+        Maps that are currently being used on real sites, demonstrated with
+        RAMP4. Note that some not all the features on the real sites are
+        currently supported.
+        <ul>
+            <li>
+                <a href="index-samples.html?sample=23">
+                    23. Climate Action Map
+                </a>
+            </li>
+            <li>
+                <a href="index-samples.html?sample=24">
+                    24. Canadian Environmental Sustainability Indicators
+                </a>
+            </li>
+            <li>
+                <a href="index-samples.html?sample=25">
+                    25. Canadian Centre for Climate Services
+                </a>
             </li>
         </ul>
     </body>
