--- a/demos/index-samples.html
+++ b/demos/index-samples.html
@@ -53,10 +53,20 @@
                         20. Layer with metadata
                     </option>
                     <option value="section-item">21. Section Items</option>
-                    <option value="info-section">
-                        22. Info Sections
-                    </option></select
-                ><a class="linky" href="index-all.html">Catalogue</a>
+                    <option value="info-section">22. Info Sections</option>
+                    <option value="cam">23. Climate Action Map (CAM)</option>
+                    <option value="cesi">
+                        24. Canadian Environmental Sustainability Indicators
+                        (CESI)
+                    </option>
+                    <option value="cccs">
+                        25. Canadian Centre for Climate Services (CCCS)
+                    </option>
+                    <option value="fog-hilight">
+                        26. Feature Highlighting with Fog Hilighter
+                    </option>
+                </select>
+                <a class="linky" href="index-all.html">Catalogue</a>
             </div>
         </section>
 
