--- a/public/index-cesi.html
+++ b/public/index-cesi.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>ramp-core</title>
-        <link rel="stylesheet" href="./lib/style.css" />
+        <link rel="stylesheet" href="./lib/ramp.css" />
     </head>
     <body style="margin: 0">
         <style>
