prevent error upon missing basemaps in config

--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -333,6 +333,9 @@
                             },
                             layers: [],
                             fixtures: {
+                                overviewmap: {
+                                    disabled: true
+                                },
                                 legend: {
                                     root: {
                                         children: []
@@ -599,6 +602,9 @@
                             },
                             layers: [],
                             fixtures: {
+                                overviewmap: {
+                                    disabled: true
+                                },
                                 legend: {
                                     root: {
                                         children: []
