--- a/demos/enhanced-samples.html
+++ b/demos/enhanced-samples.html
@@ -60,8 +60,8 @@
                     startingFixtures: [
                         'appbar',
                         'basemap',
-                        'crosshairs',
                         'details',
+                        'crosshairs',
                         'geosearch',
                         'grid',
                         'help',
@@ -351,7 +351,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
@@ -617,7 +618,8 @@
                                         'home',
                                         'basemap',
                                         'legend',
-                                        'geosearch'
+                                        'geosearch',
+                                        'draw'
                                     ]
                                 },
                                 export: {
